--- a/CycloidLength/CycloidLength.tex
+++ b/CycloidLength/CycloidLength.tex
@@ -14,7 +14,7 @@ Relationship between their arclengths.
  
 \section{Introduction}
 
-Roll a circle ${\cal C}_1$ of raduis $a$ once through its circumference on a line ${\cal L}$ and a point $P_1$ fixed in the reference frame of the circle sweeps out a \emph{general cylcoid}. When $P_1$ is outside the circle, the \emph{prolate cylcoid} (from the Latin \emph{poferre}, to extend and the Greek \emph{kyklos}, circle) crosses ${\cal L}$. In a recent article,  D. Robinson showed the length of the prolate cycloid on the same side of ${\cal L}$ as ${\cal C}_1$ exceeds the opposite-side length by $8a$. The excess surprisingly does not depend on the distance $b>a$ of the tracing point from the center of ${\cal C}_1$.  Choosing $b=a$ shows the exess equals the length of the \emph{sister} cycloid traced by a point $P_2$ on the circumference of the same rolling circle (see Figure 1, where ${\cal L}$ is the $x$-axis, $a=2$, and $b=4$).
+Roll a circle ${\cal C}_1$ of radius $a$ once through its circumference on a line ${\cal L}$ and a point $P_1$ fixed in the reference frame of the circle sweeps out a \emph{general cylcoid}. When $P_1$ is outside the circle, the \emph{prolate cylcoid} (from the Latin \emph{poferre}, to extend and the Greek \emph{kyklos}, circle) crosses ${\cal L}$. In a recent article,  D. Robinson showed the length of the prolate cycloid on the same side of ${\cal L}$ as ${\cal C}_1$ exceeds the opposite-side length by $8a$. The excess surprisingly does not depend on the distance $b>a$ of the tracing point from the center of ${\cal C}_1$.  Choosing $b=a$ shows the excess equals the length of the \emph{sister} cycloid traced by a point $P_2$ on the circumference of the same rolling circle (see Figure 1, where ${\cal L}$ is the $x$-axis, $a=2$, and $b=4$).
 
 \begin{onlineOnly}
     \begin{center}
@@ -61,7 +61,7 @@ These observations suggest an arclength theorem for epicycloids and hypocycloids
 
 And what about \emph{curtate} (from the Latin \emph{curtus}, cut short) cycloids, curves traced by points inside a rolling circle? It seems like there should be an arclength theorem for these, and in fact there is (Section??) 
 
-Near the end of his paper Robinson asks for a heuristic explanation of his arclength theorem and the genesis of this article was to find such a proof. While this paper falls short of the mark, a kind proof-without-words in a single picture, we do hope it offers some geometric insight into why these arclength theorems are true. By taking a more geometric approach (Sections ????) and working locally, we keep computations to a minimum. %  by avoiding integrals and parameteric descricptions of curves  %, keep computations to a minumum and avoid relying both on integration and parametric descriptions of the curves.
+Near the end of his paper Robinson asks for a heuristic explanation of his arclength theorem and the genesis of this article was to find such a proof. While this paper falls short of this mark, a kind proof-without-words in a single picture, we do hope it offers some geometric insight into why these arclength theorems are true. By taking a geometric approach (Sections ????) and working locally, we keep computations to a minimum. %  by avoiding integrals and parameteric descricptions of curves  %, keep computations to a minumum and avoid relying both on integration and parametric descriptions of the curves.
 
 
 % and the genesis of this article was to find such a proof. While we fell short of the mark, a kind of proof-without-words in a single picture, we do take a more geometric approach to prove a more general theorem about arclengths of prolate cycloids (Sections ??-??), a proof that avoids elliptic integrals  and keeps the computations to a miniumum. We hope it offers some insight into why these theorems are true.
@@ -129,7 +129,7 @@ Part 2-- and this is a hint-- what part of the car is traveling at 120 mph?}
 
 
 
-It might seem counterintuitive that at any moment a rolling wheel is rotating \emph{not} about its center but about its point of contact with the ground. This point, the wheel's \emph{instantaneous center of rotation}, is the point in the reference frame of the rolling wheel momentarily at rest (the cusps of the ordinary cycloid in Figure 1 reveal why, because as the tracing point bounces off the $x$-axis it reverses direction and comes to a stop.).  And at any moment, each point $P$ at rest in the reference frame of the rolling wheel,  like a pebble stuck in a tire, rotates about this center of rotation. This has two implications.         %The cusps of the ordinary cycloid in Figure 1 reveal why, because as the tracing point bounces off the $x$-axis it reverses direction and comes to a stop.
+It might seem counterintuitive that at any moment a rolling wheel is rotating \emph{not} about its center but about its point of contact with the ground. This point, the wheel's \emph{instantaneous center of rotation}, is the point in the reference frame of the rolling wheel momentarily at rest (the cusps of the ordinary cycloid in Figure 1 reveal why, for as the tracing point bounces off the $x$-axis it reverses direction and necessarily comes to a stop.).  And at any moment, each point $P$ at rest in the reference frame of the rolling wheel,  like a pebble stuck in a tire, rotates about this center of rotation. This has two implications.         %The cusps of the ordinary cycloid in Figure 1 reveal why, because as the tracing point bounces off the $x$-axis it reverses direction and comes to a stop.
 
 %At any moment, each point $P$ at rest in the reference frame of the rolling wheel,  like a pebble stuck in a tire, rotates about this center of rotation.  This has two implications. 
 
@@ -326,7 +326,7 @@ in the radii of curvature of the upper and lower prolate cycloid, all at the sam
 
 
 \section{Prolate Epicycloids}
-A classic problem asks how many rotations a quarter makes as it rolls once around another. 
+A classic problem asks how many rotations one quarter makes as it rolls once around another. 
 
 The answer is two. As the quarter rolls through its circumference, it makes one clockwise rotation in the reference frame of the rolling tangent line (Figure ??). But since this tangent makes one clockwise rotation around the fixed quarter, the quarter makes two rotations as it rolls once around the other. 
 
@@ -342,7 +342,7 @@ The answer is two. As the quarter rolls through its circumference, it makes one 
 
 The same is true locally. As the rolling quarter turns through the differential angle $d\theta$ in the reference frame of the rolling tangent, it rotates through the differential angle $d\theta^* = 2\, d\theta$ in the reference frame of the fixed quarter. A consequence is that the arclength of a cardioid is twice that of its sister cycloid, both globally and locally. These curves are traced by points attached to a circle as it rolls once through its circumference; along a line for the cycloid and around a circle of the same radius for the cardioid.  
 
-To see this, we need only attach a tracing point $P^*$ to the top rolling quarter of Figure 3 (see Figure 4). This point sweeps out a cardioid in the reference frame of the fixed quarter and an ordinary cycloid in the reference frame of the rolling tangent. Now as the quarter rolls through the differential arclength $d\sigma$ of its circumference it turns through the angles $d\theta = d\sigma/a$ in the reference frame of the rolling tangent and $d\theta^* = 2\, d\theta$ in reference frame of the fixed quarter. Hence, as the quarter rolls through the differential arclength $d\sigma$, $P^*$ sweeps out a differential arclength
+To see shy, we need only attach a tracing point $P^*$ to the top rolling quarter of Figure 3 (see Figure 4). This point sweeps out a cardioid in the reference frame of the fixed quarter and an ordinary cycloid in the reference frame of the rolling tangent. Now as the quarter rolls through the differential arclength $d\sigma$ of its circumference it turns through the angles $d\theta = d\sigma/a$ in the reference frame of the rolling tangent and $d\theta^* = 2\, d\theta$ in reference frame of the fixed quarter. Hence, as the quarter rolls through the differential arclength $d\sigma$, $P^*$ sweeps out a differential arclength
 %\[
  %  ds = Q^*P^* \, d\theta
 %\]
@@ -372,13 +372,14 @@ A similar relationship holds more generally. As a circle ${\cal C}$ of radius $a
      d\theta^* &= \left(\frac{1}{a} + \frac{1}{r} \right) \, d\sigma \\
                     &= \left( 1 + \frac{a}{r}  \right) \, d\theta . 
 \end{align*}
-in the reference frame of ${\cal C}_r$. The same equation also holds if ${\cal C}$ rolls on the inside of ${\cal C}_r$ and we take $r$ to be negative.
+in the reference frame of ${\cal C}_r$. The same equation also holds if we take $r$ to be negative when ${\cal C}$ rolls on the inside of ${\cal C}_r$.
 
 In either case, the equation implies a similar relationship 
 \[
   ds^*  =  \left( 1 + \frac{a}{r}  \right)  ds
 \]
-for arclengths between inclination angles $\phi$ and $\phi + d\phi$ of a general cycloid, traced by a point $b$ units from the center of circle of radius $a$ as it rolls on a line, and the $(a,b,r)$-epicycloid (or hypocycloid if $r<0$) traced by the same point on the same circle rolling around the outside (inside) of a circle of radius $r$. Here, as for the cardioid, we measure the inclination angle of the epicycloid relative to the rolling tangent.
+between the differential arclength $ds$ of a general $(a,b)$-cycloid (traced by a point $b$ units from the center of a circle of radius $a$ rolling on a line) and the differential arclength $ds^*$ of the $(a,b,r)$-epicycloid (or hypocycloid if $r<0$) traced by the same point on the same circle rolling around the outside (inside) of a circle of radius $r$. Here, as for the cardioid, we measure the arclengths between their common inclinations angles $\phi$ and $\phi+d\phi$ and the inclination angle of the epicycloid relative to the rolling tangent.
+%for arclengths between inclination angles $\phi$ and $\phi + d\phi$ of a general cycloid, traced by a point $b$ units from the center of circle of radius $a$ as it rolls on a line, and the $(a,b,r)$-epicycloid (or hypocycloid if $r<0$) traced by the same point on the same circle rolling around the outside (inside) of a circle of radius $r$. Here, as for the cardioid, we measure the inclination angle of the epicycloid relative to the rolling tangent.
 
 
 
@@ -425,7 +426,7 @@ Figure 5 shows an example for the $(a,b,r) = (2,3.6,4)$ prolate epicycloid. Its 
 
 
 
-Figure ?? shows an example with a single transition point, where a circle rolls once around another of the same radius. The $(a,a,a)$ epicycloid is a cardioid and the $(a,b,a)$ prolate epicycloid a limacon with polar equation $r=2a+2b\cos\theta$ (the the pole is at the node and the polar axis points upward in the figure). The transition point is the node. So the limacon's outer arclength exceeds the length of its loop by the length $2(8a) = 16a$ of the sister cardioid equal to twice that of the ordinary $a$-cycloid).
+Figure ?? shows an example with a single transition point, crossed twice.  Here a circle rolls once around another of the same radius. The $(a,a,a)$ epicycloid is a cardioid and the $(a,b,a)$ prolate epicycloid a limacon with polar equation $r=2a+2b\cos\theta$ (the the pole is at the node and the polar axis points upward in the figure). The transition point is the node. So (Robinson) the limacon's outer arclength exceeds the length of its loop by the length $2(8a) = 16a$ of the sister cardioid equal to twice that of the ordinary $a$-cycloid).
 
 % The lower arc is the loop of the limacon. So the epicyloid theorem says is the lower arc and so the limacon's outer arclength exceeds the loop's by the length $2(8a) = 16a$ of the limacon's sister cardioid equal to twice that of the ordinary $a$-cycloid). 
 \begin{onlineOnly}
@@ -438,9 +439,8 @@ Figure ?? shows an example with a single transition point, where a circle rolls 
 
 
 
-Figure ?? shows another example, closely related to the first. Here a circle rolls around the \emph{inside} of a circle with twice the radius. Now the $(a,b,-2a)$ prolate hypocycloid is an ellipse with major and minor semi-axes $b+a$ and $b-a$. And its sister $(a,a,2a)$ hypocycloid is a twiced-traced diameter of the larger circle. So the same-side arclength of the ellipse exceeds its opposite-side length by $4a$, twice the diameter of the fixed circle. 
+Figure ?? shows an example closely related to the first. Here a circle rolls around the \emph{inside} of a circle with twice the radius. Now the $(a,b,-2a)$ prolate hypocycloid is an ellipse with major and minor semi-axes $b+a$ and $b-a$. And its sister $(a,a,2a)$ hypocycloid is a twiced-traced diameter of the larger circle. So (Robinson) the same-side arclength of the ellipse exceeds its opposite-side length by $4a$, twice the diameter of the fixed circle. 
 
-%%%%Figure ?? illustrates the arclength theorem in this case for an $(a, b, -2a) = (2, 3.6, -4)$ prolate hypocyloid, an ellipse with major and minor semi-axes $b+a$ and $b-a$. Here the same-side arclength of the ellipse exceeds its opposite-side length by $4a$, twice the diameter of the fixed circle.
 
 \begin{onlineOnly}
     \begin{center}
@@ -460,101 +460,23 @@ Robinson identifies the transition points. The tangent segments at these points 
 
 \href{https://www.desmos.com/calculator/2afbtinzyu}{Wrapping Cycloids Around Circles Ellipse 2BB}
 
-But why? It turns out that these particular tangent segments to the ellipse
+%But why? It turns out that these particular tangent segments to the ellipse
 
-%As Robinson points out, this gives a way to express the same-side and opposite-side lengths, respectively $\lambda$ and $\mu$, in terms of the ellipses's circumference $C$. For since
-%\[
-%      \lambda + \mu = C
-%\] 
-%and
-%\[
- %   \lambda - \mu = 4a ,
-%\]
-%\[
- %    \lambda = \frac{1}{2}C + 2a \,\,  \text{ and } \,\, \mu =  \frac{1}{2}C - 2a .
-%\]
+%To understand why and to describe these transitions points another way, we head back to more familiar ground and consider four  problems.
 
-%\end{enumerate}
+The transition points have an equivalent description. They are the points of the ellipse that minimize the length of its tangent segments running between the coordinate axes. To understand why, we start with a more problem from differential calculus.
+
+
+\section{Ladders, Astroids, and Ellipses}
+
+A problem in Stewart asks for the length of the longest one-dimensional ladder you can carry horizontally around the corner below.
+
+%\begin{enumerate}
+%\item At the moment shown, when the ends of a ladder are sliding along a vertical wall and a horizontal floor, what point of the ladder is moving parallel to the ladder?  % and tmakes the angle $\phi$ with the floor and its ends are slidingWhat point on the ladder
 
 
 
-
-
-
-
-
-%\begin{onlineOnly}
- %   \begin{center}
-%\desmos{hw0lkueztk}{900}{600}
-%\end{center}
-%\end{onlineOnly}
-
-%\href{https://www.desmos.com/calculator/hw0lkueztk}{Limacon Cycloid Arclength 3}
-
-
-
-%\begin{onlineOnly}
-%    \begin{center}
-%\desmos{sgpsbfqdze}{900}{600}
-%\end{center}
-%\end{onlineOnly}
-
-%\href{https://www.desmos.com/calculator/sgpsbfqdze}{Epicycloids 4 Neprhoid}
-
-%\begin{onlineOnly}
-%    \begin{center}
-%\desmos{v9bsdhviwh}{900}{600}
-%\end{center}
-%\end{onlineOnly}
-
-%\href{https://www.desmos.com/calculator/v9bsdhviwh}{Epicycloids 4 Neprhoid 2}
-
-
-
-
-%\section{Ellipses}
-
-%\begin{onlineOnly}
-%    \begin{center}
-%\desmos{yzuot0hbvv}{900}{600}
-%\end{center}
-%\end{onlineOnly}
-
-%\href{https://www.desmos.com/calculator/yzuot0hbvv}{Epicycloids 3 Ellipse}
-
-
-
-
-%\begin{onlineOnly}
-%    \begin{center}
-%\desmos{yillqxp8mg}{900}{600}   %yfoczp8y2g
-%\end{center}
-%\end{onlineOnly}
-
-%\href{https://www.desmos.com/calculator/yillqxp8mg}{Wrapping Cycloids Around Circles Ellipse 2B}
-
-\section{Double Generation Theorem}
-Double Generation:
-
-\begin{onlineOnly}
-    \begin{center}
-\desmos{fidce8bipo}{900}{600}   
-\end{center}
-\end{onlineOnly}
-
-\href{https://www.desmos.com/calculator/fidce8bipo}{Ellipse as Glissette}
-
-
-\section{Transition Points}
-
-Four related problems:
-
-\begin{enumerate}
-\item At the moment shown, when the ends of a ladder are sliding along the wall and floor, what point of the ladder is moving in the direction of the ladder?  % and tmakes the angle $\phi$ with the floor and its ends are slidingWhat point on the ladder
-
-
-
-\item What is the length of the longest one-dimensional ladder you can carry horizontally around the corner below?
+%\item What is the length of the longest one-dimensional ladder you can carry horizontally around the corner below?
 
 \begin{onlineOnly}
     \begin{center}
@@ -566,15 +488,15 @@ Four related problems:
 
 
 
-\item What is the length of the shortest tangent segment to the ellipse
-\[
-     \frac{x^2}{p^2} + \frac{y^2}{q^2} = 1
-\]
-cut out by the coordinate axes?
+%\item What is the length of the shortest tangent segment to the ellipse
+%\[
+%     \frac{x^2}{p^2} + \frac{y^2}{q^2} = 1
+%\]
+%cut out by the coordinate axes?
 
-%\item What is the length of the shortest ladder that reaches from the ground to a tall building and passes over the top of a wall $A$ feet from the building and $B$ feet high?
+Kalman's idea is to reverse the question. He fixes the ladder's length $L$ and asks instead for the widths of all pairs of hallways that allow the passage of a ladder of maximum length $L$. This amounts to 
 
-\item Is there a point that represents the same location in the two maps of Washington State shown below?
+Is there a point that represents the same location in the two maps of Washington State shown below?
 
 \begin{onlineOnly}
     \begin{center}
@@ -584,7 +506,10 @@ cut out by the coordinate axes?
 
 \href{https://www.desmos.com/calculator/cthwmjxkp2}{Washington Maps}
 
-\end{enumerate}
+%\end{enumerate}
+
+
+
 
 Solutions:
 
@@ -675,6 +600,19 @@ When I ask students to first sketch the path of a point on the sliding ladder, t
 \end{onlineOnly}
 
 \href{https://www.desmos.com/calculator/j1fxecamkh}{Ellipse and Nephroid}
+
+
+\section{Double Generation Theorem}
+Double Generation:
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{fidce8bipo}{900}{600}   
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/fidce8bipo}{Ellipse as Glissette}
+
 
 
 \section{Curtate Cycloids}
