--- a/CycloidLength/CycloidLength.tex
+++ b/CycloidLength/CycloidLength.tex
@@ -61,7 +61,7 @@ These observations suggest an arclength theorem for epicycloids and hypocycloids
 
 And what about \emph{curtate} (from the Latin \emph{curtus}, cut short) cycloids, curves traced by points inside a rolling circle? It seems like there should be an arclength theorem for these, and in fact there is (Section??) 
 
-Near the end of his paper Robinson asks for a heuristic explanation of his arclength theorem and the genesis of this article was to find such a proof. While this paper falls short of this mark, a kind proof-without-words in a single picture, we do hope it offers some geometric insight into why these arclength theorems are true. By taking a geometric approach (Sections ????) and working locally, we keep computations to a minimum. %  by avoiding integrals and parameteric descricptions of curves  %, keep computations to a minumum and avoid relying both on integration and parametric descriptions of the curves.
+Near the end of his paper Robinson asks for a heuristic explanation of his arclength theorem and the genesis of this article was to find such a proof. While we fall short of this mark, a kind proof-without-words in a single picture, we do hope it offers some geometric insight into why these arclength theorems are true. %By taking a geometric approach (Sections ????) and working locally, we keep computations to a minimum. %  by avoiding integrals and parameteric descricptions of curves  %, keep computations to a minumum and avoid relying both on integration and parametric descriptions of the curves.
 
 
 % and the genesis of this article was to find such a proof. While we fell short of the mark, a kind of proof-without-words in a single picture, we do take a more geometric approach to prove a more general theorem about arclengths of prolate cycloids (Sections ??-??), a proof that avoids elliptic integrals  and keeps the computations to a miniumum. We hope it offers some insight into why these theorems are true.
@@ -426,7 +426,7 @@ Figure 5 shows an example for the $(a,b,r) = (2,3.6,4)$ prolate epicycloid. Its 
 
 
 
-Figure ?? shows an example with a single transition point, crossed twice.  Here a circle rolls once around another of the same radius. The $(a,a,a)$ epicycloid is a cardioid and the $(a,b,a)$ prolate epicycloid a limacon with polar equation $r=2a+2b\cos\theta$ (the the pole is at the node and the polar axis points upward in the figure). The transition point is the node. So (Robinson) the limacon's outer arclength exceeds the length of its loop by the length $2(8a) = 16a$ of the sister cardioid equal to twice that of the ordinary $a$-cycloid).
+Figure ?? shows an example with a single transition point, crossed twice.  Here a circle rolls once around another of the same radius. The $(a,a,a)$ epicycloid is a cardioid and the $(a,b,a)$ prolate epicycloid a limacon with polar equation $r=2a+2b\cos\theta$ (the the pole is at the node and the polar axis points upward in the figure). The transition point is the node and we recover Robinson's result. The limacon's outer arclength exceeds the length of its loop by the length $2(8a) = 16a$ of the sister cardioid equal to twice that of the ordinary $a$-cycloid).
 
 % The lower arc is the loop of the limacon. So the epicyloid theorem says is the lower arc and so the limacon's outer arclength exceeds the loop's by the length $2(8a) = 16a$ of the limacon's sister cardioid equal to twice that of the ordinary $a$-cycloid). 
 \begin{onlineOnly}
@@ -439,7 +439,7 @@ Figure ?? shows an example with a single transition point, crossed twice.  Here 
 
 
 
-Figure ?? shows an example closely related to the first. Here a circle rolls around the \emph{inside} of a circle with twice the radius. Now the $(a,b,-2a)$ prolate hypocycloid is an ellipse with major and minor semi-axes $b+a$ and $b-a$. And its sister $(a,a,2a)$ hypocycloid is a twiced-traced diameter of the larger circle. So (Robinson) the same-side arclength of the ellipse exceeds its opposite-side length by $4a$, twice the diameter of the fixed circle. 
+Figure ?? shows an example closely related to the one in Figure ???. Here a circle rolls around the \emph{inside} of a circle with twice the radius. Now the $(a,b,-2a)$ prolate hypocycloid is an ellipse with major and minor semi-axes $b+a$ and $b-a$. And its sister $(a,a,2a)$ hypocycloid is a twiced-traced diameter of the larger circle. So (Robinson) the same-side arclength of the ellipse exceeds its opposite-side length by $4a$, twice the diameter of the fixed circle. 
 
 
 \begin{onlineOnly}
@@ -464,16 +464,46 @@ Robinson identifies the transition points. The tangent segments at these points 
 
 %To understand why and to describe these transitions points another way, we head back to more familiar ground and consider four  problems.
 
-The transition points have an equivalent description. They are the points of the ellipse that minimize the length of its tangent segments running between the coordinate axes. To understand why, we start with a more problem from differential calculus.
+The transition points have an equivalent description. They are the points of the ellipse that minimize the length of its tangent segments running between the coordinate axes. We turn to this next. %To understand why is the topic of the next section.
 
 
 \section{The Trammel of Archimedes}
 
+%As the ends of a ladder slide along a horizontal floor and a vertical wall, what curve is traced by a point $P$ on the ladder (Figure ?)
+
+Figure ?? (in the previous section) suggests how to generate an ellipse as a \emph{glissette} (from the French, \emph{glisser}, to slide). It is the curve traced by a point on a segment with a fixed length $L$ as its endpoints slide along two perpendicular lines. In Figure ?? the tracing point lies beyond the endpoints of segment $\overline{AB}$, but still on the line $AB$. Having the tracing point is outside the segment like this makes it possible to build an ellisograph (the trammel of Archimedes), as Tom Silva does in the episode of \emph{This Old House}.
+
+But to find the shortest tangent segment to an ellipse, it's better for the tracing point to lie on the sliding segment. 
+
+
+ 
+
+When I ask students to sketch the curve traced by the point $P$ on the ladder in Figure ?? as its ends slide along a vertical wall and horizontal floor, the almost universal response is to draw some kind of concave up curve. But the path is actually concave down. 
+
+To parameterize the cuve, let $p$ and $q$ be the respective distances from $P$ to the top and bottom ends of the ladder. Then when the ladder makes the angle $\phi$ with the floor, point $P$ has coordinates
+\[
+    (x,y) = (a\cos\phi, b \sin \phi) \, , \, 0\leq \phi \leq \pi/2
+\]
+in the coordinate system in Figure ??. So $P$ sweeps out a quarter-ellipse centered at the origin.
+
+This method of tracing an ellipse
+
+Tom Silva 
 \begin{center}  
 \youtube{watch?v=SZ6_jjfqNBo}  
 \end{center}
 
 \href{https://www.youtube.com/watch?v=SZ6_jjfqNBo}{Tom Silva drawing an ellipse}
+
+We can turn this into a calculus problem by asking if the sliding ladder is ever tangent to the quarter-ellipse. Or, we can turn this question around and ask to find the tracing point if the ladder below, making an angle $\phi$ with the floor, is tangent to the quarter-ellipse.
+
+This problem
+
+
+%consider the family of ellipses traced by $P$ as the distances $p$, $q$ vary. Which of these ellipses, if any, has this ladder as a tangent? when the ladder makes the angle $\phi$ with the ground
+
+
+
 
 A problem in Stewart asks for the length of the longest one-dimensional ladder you can carry horizontally around the corner below.
 
