--- a/CycloidLength/CycloidLength.tex
+++ b/CycloidLength/CycloidLength.tex
@@ -439,7 +439,7 @@ Figure ?? shows an example with a single transition point, crossed twice.  Here 
 
 
 
-Figure ?? shows an example closely related to the one in Figure ???. Here a circle rolls around the \emph{inside} of a circle with twice the radius. Now the $(a,b,-2a)$ prolate hypocycloid is an ellipse with major and minor semi-axes $b+a$ and $b-a$. And its sister $(a,a,2a)$ hypocycloid is a twiced-traced diameter of the larger circle. So (Robinson) the same-side arclength of the ellipse exceeds its opposite-side length by $4a$, twice the diameter of the fixed circle. 
+Figure ?? shows an example closely related to the one in Figure ???. Here a circle rolls around the \emph{inside} of a circle with twice the radius. Now the $(a,b,-2a)$ prolate hypocycloid is an ellipse with major and minor semi-axes $b+a$ and $b-a$. And its sister $(a,a,2a)$ hypocycloid is a twiced-traced diameter of the larger circle. So the same-side arclength of the ellipse exceeds its opposite-side length by $4a$, twice the diameter of the fixed circle. 
 
 
 \begin{onlineOnly}
@@ -469,7 +469,18 @@ The transition points have an equivalent description. They are the points of the
 
 \section{The Trammel of Archimedes}
 
-%As the ends of a ladder slide along a horizontal floor and a vertical wall, what curve is traced by a point $P$ on the ladder (Figure ?)
+Figure ?? below suggests another way to generate an ellipse. As the circle rolls around the inside of a circle with twice the radius,  the points $A$ and $B$ at opposite ends of a diameter of the rolling circle, move along perpendicular diameters of the fixed circle.
+
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{nhapbvzxnu}{900}{600}   %yfoczp8y2g
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/nhapbvzxnu}{Wrapping Cycloids Around Circles Ellipse 2BBB}
+
+
 
 Figure ?? (in the previous section) suggests how to generate an ellipse as a \emph{glissette} (from the French, \emph{glisser}, to slide). It is the curve traced by a point on a segment with a fixed length $L$ as its endpoints slide along two perpendicular lines. In Figure ?? the tracing point lies beyond the endpoints of segment $\overline{AB}$, but still on the line $AB$. Having the tracing point is outside the segment like this makes it possible to build an ellisograph (the trammel of Archimedes), as Tom Silva does in the episode of \emph{This Old House}.
 
