--- a/CycloidLength/CycloidLength.tex
+++ b/CycloidLength/CycloidLength.tex
@@ -439,7 +439,9 @@ Figure ?? shows an example with a single transition point, crossed twice.  Here 
 
 
 
-Figure ?? shows an example closely related to the one in Figure ???. Here a circle rolls around the \emph{inside} of a circle with twice the radius. Now the $(a,b,-2a)$ prolate hypocycloid is an ellipse with major and minor semi-axes $b+a$ and $b-a$. And its sister $(a,a,2a)$ hypocycloid is a twiced-traced diameter of the larger circle. So the same-side arclength of the ellipse exceeds its opposite-side length by $4a$, twice the diameter of the fixed circle. 
+Figure ?? shows an example closely related to the one in Figure ???. Here a circle ${\cal C}_1$ with radius $a$ rolls around the \emph{inside} of a circle ${\cal C}_2$ with radius $2a$. The point $P^*$ a distance $b$ from the center of the rolling circle traces an ellipse with major and minor semi-axes $b+a$ and $b-a$. And the point $P$ attaced to the rolling circle traces the diameter of the larger circle twice as ${\cal C}_1$ rolls once around ${\cal C}_2$. So the arclength theorem for prolate hypocycloids says the same-side arclength of the ellipse exceeds its opposite-side length by $4a$, twice the diameter of ${\cal C}_2$.
+
+% Now the $(a,b,-2a)$ prolate hypocycloid is an ellipse with major and minor semi-axes $b+a$ and $b-a$. And its sister $(a,a,2a)$ hypocycloid is a twiced-traced diameter of the larger circle. So the same-side arclength of the ellipse exceeds its opposite-side length by $4a$, twice the diameter of the fixed circle. 
 
 
 \begin{onlineOnly}
@@ -450,7 +452,10 @@ Figure ?? shows an example closely related to the one in Figure ???. Here a circ
 
 \href{https://www.desmos.com/calculator/yillqxp8mg}{Wrapping Cycloids Around Circles Ellipse 2B}
 
-Robinson identifies the transition points. The tangent segments at these points with their endpoints on the axes of the ellipse have length $2b$. Furthermore the points of tangency divide each segment into two segments with lengths $P^*B = b+a$ and $P^*A = b-a$ equal to the semi-major and semi-minor axes (see Figure ?). 
+But to better understand this result geometrically, we need to identify the transition points. Robinson does just that. The tangent segments at these points with their endpoints on the axes of the ellipse have length $2b$. Furthermore the points of tangency divide each segment into two segments with lengths $P^*B = b+a$ and $P^*A = b-a$ equal to the semi-major and semi-minor axes (see Figure ? below).
+
+
+%Robinson identifies the transition points. The tangent segments at these points with their endpoints on the axes of the ellipse have length $2b$. Furthermore the points of tangency divide each segment into two segments with lengths $P^*B = b+a$ and $P^*A = b-a$ equal to the semi-major and semi-minor axes (see Figure ?). 
 
 \begin{onlineOnly}
     \begin{center}
@@ -464,10 +469,23 @@ Robinson identifies the transition points. The tangent segments at these points 
 
 %To understand why and to describe these transitions points another way, we head back to more familiar ground and consider four  problems.
 
-The transition points have an equivalent description. They are the points of the ellipse that minimize the length of its tangent segments running between the coordinate axes. We turn to this next. %To understand why is the topic of the next section.
+To better understand why and to give an equivalent description of the transition points (as the points on the ellipse that minimize the length of its tangent segments running between the coordinate axes), we turn to a more practical way to draw an ellipse. %the trammel of Archimedes.
+
+
+%The transition points have an equivalent description. They are the points of the ellipse that minimize the length of its tangent segments running between the coordinate axes. We turn to this next. %To understand why is the topic of the next section.
 
 
 \section{The Trammel of Archimedes}
+
+
+In an episode of \emph{This Old House} Tom Silva uses the trammel of Archimedes to construct an ellipse. Trammel comes from \emph{trēmaculum}, the Latin trēs ("three") and macula ("mesh"). In middle English it referred to a three-layered fishing net and it has evolved to mean any restraint or hindrance. And restraining two points $P$ and $Q$ on a thin rod to slide along two (usually perpendicular) lines forces any third point $P^*$ on that rod (or more generally any point fixed in the reference frame of the rod) to trace an ellipse. %that we can draw an ellipse by tracing a third point $P^*$ on the rod. %(more generally, as the endpoints of a segment slide along two perpendicular lines, a point fixed in the reference frame of the segment sweeps out an ellipse). 
+
+The trammel of Archimedes hides in Figure ??, repeated here below, where the endpoints $P$ and $Q$
+
+
+
+ %(The Wilderness Act of 1964 defined wilderness as ``an area where the earth and its community of life are untrammeled by man, where man himself is a visitor who does not remain")
+
 
 Figure ?? below suggests another way to generate an ellipse. As the circle rolls around the inside of a circle with twice the radius,  the points $A$ and $B$ at opposite ends of a diameter of the rolling circle, move along perpendicular diameters of the fixed circle.
 
