--- a/CycloidLength/CycloidLength.tex
+++ b/CycloidLength/CycloidLength.tex
@@ -1,5 +1,5 @@
 \documentclass{ximera}
-\title{Arclengths of Cycloids and Epicycloids}
+\title{Cycloidal Arclengths: An Animated Approach}
 
 \newcommand{\pskip}{\vskip 0.1 in}
 
@@ -14,7 +14,9 @@ Relationship between their arclengths.
  
 \section{Introduction}
 
-Roll a circle ${\cal C}_1$ of radius $a$ once through its circumference on a line ${\cal L}$ and a point $P_1$ fixed in the reference frame of the circle sweeps out a \emph{general cylcoid}. When $P_1$ is outside the circle, the \emph{prolate cylcoid} (from the Latin \emph{poferre}, to extend and the Greek \emph{kyklos}, circle) crosses ${\cal L}$. In a recent article,  D. Robinson showed the length of the prolate cycloid on the same side of ${\cal L}$ as ${\cal C}_1$ exceeds the opposite-side length by $8a$. The excess surprisingly does not depend on the distance $b>a$ of the tracing point from the center of ${\cal C}_1$.  Choosing $b=a$ shows the excess equals the length of the \emph{sister} cycloid traced by a point $P_2$ on the circumference of the same rolling circle (see Figure 1, where ${\cal L}$ is the $x$-axis, $a=2$, and $b=4$).
+%Figure 1 shows a \emph{prolate cycloid} (from the Latin \emph{poferre}, to extend and the Greek \emph{kyklos}, circle). It is the curve traced by a point $P_1$ outside a circle rolling on a line
+
+Roll a circle ${\cal C}_1$ of radius $a$ once through its circumference on a line ${\cal L}$ and a point $P_1$ fixed in the reference frame of the circle sweeps out one arch of a \emph{general cylcoid}. When $P_1$ is outside the circle, the \emph{prolate cylcoid} (from the Latin \emph{poferre}, to extend and the Greek \emph{kyklos}, circle) crosses ${\cal L}$. In a recent article,  D. Robinson showed the length of the prolate cycloid on the same side of ${\cal L}$ as ${\cal C}_1$ exceeds the opposite-side length by $8a$. The excess surprisingly does not depend on the distance $b>a$ of the tracing point from the center of ${\cal C}_1$.  Choosing $b=a$ shows the excess equals the length of the \emph{sister} cycloid traced by a point $P_2$ on the circumference of the same rolling circle (see Figure 1, where ${\cal L}$ is the $x$-axis, $a=2$, and $b=4$).
 
 \begin{onlineOnly}
     \begin{center}
@@ -24,6 +26,18 @@ Roll a circle ${\cal C}_1$ of radius $a$ once through its circumference on a lin
 
 \href{https://www.desmos.com/calculator/ty0hdz7uyj}{Limacon Cylcoid Arclength 1B}
 
+It turns out there is a corresponding result for \emph{curtate}  (from the Latin \emph{curtus}, cut short) cycloids, curves traced by points inside a circle rolling on a line. 
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{0eosvsfm9r}{900}{600}
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/0eosvsfm9r}{Curtate Cycloid 33}
+
+
+ 
 Robinson proves two other similarly surprising results. One is about the limacon with polar equation $r=A + B\cos\theta$, $\theta\in [0,2\pi)$. When $B>A$ the limacon intersects itself and Robinson shows the length of its outer loop exceeds the length of the inner loop by $8A$. And taking $B=A$ shows the excess equals the length of the cardioid $r=A + A\cos\theta$.
 
 The other is about ellipses. It says when $B\geq A$ and 
@@ -439,7 +453,7 @@ Figure ?? shows an example with a single transition point, crossed twice.  Here 
 
 
 
-Figure ?? shows an example closely related to the one in Figure ???. Here a circle ${\cal C}_1$ with radius $a$ rolls around the \emph{inside} of a circle ${\cal C}_2$ with radius $2a$. The point $P^*$ a distance $b$ from the center of the rolling circle traces an ellipse with major and minor semi-axes $b+a$ and $b-a$. And the point $P$ attaced to the rolling circle traces the diameter of the larger circle twice as ${\cal C}_1$ rolls once around ${\cal C}_2$. So the arclength theorem for prolate hypocycloids says the same-side arclength of the ellipse exceeds its opposite-side length by $4a$, twice the diameter of ${\cal C}_2$.
+Figure ?? shows an example closely related to the one in Figure ???. Here a circle ${\cal C}_1$ with radius $a$ rolls around the \emph{inside} of a circle ${\cal C}_2$ with radius $2a$. The point $P^*$, $b$ units from the center of the rolling circle, traces an ellipse with major and minor semi-axes $b+a$ and $b-a$. The point $P$ attaced to the rolling circle traces the diameter of the larger circle twice as ${\cal C}_1$ rolls once around ${\cal C}_2$. Our theorem for prolate hypocycloids then implies the same-side arclength (red) of the ellipse exceeds its opposite-side length (blue) by $4a$, twice the diameter of ${\cal C}_2$.
 
 % Now the $(a,b,-2a)$ prolate hypocycloid is an ellipse with major and minor semi-axes $b+a$ and $b-a$. And its sister $(a,a,2a)$ hypocycloid is a twiced-traced diameter of the larger circle. So the same-side arclength of the ellipse exceeds its opposite-side length by $4a$, twice the diameter of the fixed circle. 
 
@@ -452,7 +466,7 @@ Figure ?? shows an example closely related to the one in Figure ???. Here a circ
 
 \href{https://www.desmos.com/calculator/yillqxp8mg}{Wrapping Cycloids Around Circles Ellipse 2B}
 
-But to better understand this result geometrically, we need to identify the transition points. Robinson does just that. The tangent segments at these points with their endpoints on the axes of the ellipse have length $2b$. Furthermore the points of tangency divide each segment into two segments with lengths $P^*B = b+a$ and $P^*A = b-a$ equal to the semi-major and semi-minor axes (see Figure ? below).
+To better understand this result geometrically, we need to identify the transition points and Robinson does just that. The tangent segments at these points with their endpoints on the axes of the ellipse have length $2b$. Furthermore the points of tangency divide each segment into two segments with lengths $P^*B = b+a$ and $P^*A = b-a$, respectively equal to the semi-major and semi-minor axes (see Figure ? below).
 
 
 %Robinson identifies the transition points. The tangent segments at these points with their endpoints on the axes of the ellipse have length $2b$. Furthermore the points of tangency divide each segment into two segments with lengths $P^*B = b+a$ and $P^*A = b-a$ equal to the semi-major and semi-minor axes (see Figure ?). 
@@ -465,11 +479,9 @@ But to better understand this result geometrically, we need to identify the tran
 
 \href{https://www.desmos.com/calculator/2afbtinzyu}{Wrapping Cycloids Around Circles Ellipse 2BB}
 
-%But why? It turns out that these particular tangent segments to the ellipse
+To better understand why, we turn to a more practical way of drawing an ellipse.
 
-%To understand why and to describe these transitions points another way, we head back to more familiar ground and consider four  problems.
-
-To better understand why and to give an equivalent description of the transition points (as the points on the ellipse that minimize the length of its tangent segments running between the coordinate axes), we turn to a more practical way to draw an ellipse. %the trammel of Archimedes.
+%To better understand why and to give an equivalent description of the transition points (as the points on the ellipse that minimize the length of its tangent segments running between the coordinate axes), we turn to a more practical way to draw an ellipse. %the trammel of Archimedes.
 
 
 %The transition points have an equivalent description. They are the points of the ellipse that minimize the length of its tangent segments running between the coordinate axes. We turn to this next. %To understand why is the topic of the next section.
@@ -478,16 +490,13 @@ To better understand why and to give an equivalent description of the transition
 \section{The Trammel of Archimedes}
 
 
-In an episode of \emph{This Old House} Tom Silva uses the trammel of Archimedes to construct an ellipse. Trammel comes from \emph{trēmaculum}, the Latin trēs ("three") and macula ("mesh"). In middle English it referred to a three-layered fishing net and it has evolved to mean any restraint or hindrance. And restraining two points $P$ and $Q$ on a thin rod to slide along two (usually perpendicular) lines forces any third point $P^*$ on that rod (or more generally any point fixed in the reference frame of the rod) to trace an ellipse. %that we can draw an ellipse by tracing a third point $P^*$ on the rod. %(more generally, as the endpoints of a segment slide along two perpendicular lines, a point fixed in the reference frame of the segment sweeps out an ellipse). 
+In an episode of \emph{This Old House} Tom Silva uses the trammel of Archimedes to construct an ellipse. Trammel comes from \emph{trēmaculum}, a concatenation of the Latin \emph{trēs} (``three") and \emph{macula} (``mesh"). In middle English it referred to a three-layered fishing net and it has evolved to mean any restraint or hindrance (CITE A SOURCE HERE). And restraining two points $P$ and $Q$ on a thin rod to slide along two (usually perpendicular) is exactly what we need to force any third point $P^*$ on that rod (or more generally any point fixed in the reference frame of the rod) to trace an ellipse. %that we can draw an ellipse by tracing a third point $P^*$ on the rod. %(more generally, as the endpoints of a segment slide along two perpendicular lines, a point fixed in the reference frame of the segment sweeps out an ellipse). 
 
-The trammel of Archimedes hides in Figure ??, repeated here below, where the endpoints $P$ and $Q$
+The trammel of Archimedes hides in Figure ??, repeated here below, where the endpoints of the diameter $\overline{PR}$ of ${\cal C}_1$ through $P^*$ move along perpendicular lines. 
 
 
 
  %(The Wilderness Act of 1964 defined wilderness as ``an area where the earth and its community of life are untrammeled by man, where man himself is a visitor who does not remain")
-
-
-Figure ?? below suggests another way to generate an ellipse. As the circle rolls around the inside of a circle with twice the radius,  the points $A$ and $B$ at opposite ends of a diameter of the rolling circle, move along perpendicular diameters of the fixed circle.
 
 
 \begin{onlineOnly}
