--- a/CycloidLength/CycloidLength.tex
+++ b/CycloidLength/CycloidLength.tex
@@ -16,7 +16,7 @@ Relationship between their arclengths.
 
 %Figure 1 shows a \emph{prolate cycloid} (from the Latin \emph{poferre}, to extend and the Greek \emph{kyklos}, circle). It is the curve traced by a point $P_1$ outside a circle rolling on a line
 
-Roll a circle ${\cal C}_1$ of radius $a$ once through its circumference on a line ${\cal L}$ and a point $P_1$ fixed in the reference frame of the circle sweeps out one arch of a \emph{general cylcoid}. When $P_1$ is outside the circle, the \emph{prolate cylcoid} (from the Latin \emph{poferre}, to extend and the Greek \emph{kyklos}, circle) crosses ${\cal L}$. In a recent article,  D. Robinson showed the length of the prolate cycloid on the same side of ${\cal L}$ as ${\cal C}_1$ exceeds the opposite-side length by $8a$. The excess surprisingly does not depend on the distance $b>a$ of the tracing point from the center of ${\cal C}_1$.  Choosing $b=a$ shows the excess equals the length of the \emph{sister} cycloid traced by a point $P_2$ on the circumference of the same rolling circle (see Figure 1, where ${\cal L}$ is the $x$-axis, $a=2$, and $b=4$).
+Roll a circle ${\cal C}_1$ of radius $a$ once through its circumference on a line ${\cal L}$ and a point $P_1$ fixed in the reference frame of the circle sweeps out one arch of a \emph{general cylcoid}. When $P_1$ is outside the circle, the \emph{prolate cylcoid} (from the Latin \emph{poferre}, to extend and the Greek \emph{kyklos}, circle) crosses ${\cal L}$. In a recent article,  D. Robinson showed the length of the prolate cycloid on the same side of ${\cal L}$ as ${\cal C}_1$ exceeds the opposite-side length by $8a$. The excess surprisingly does not depend on the distance $b>a$ of the tracing point from the center of ${\cal C}_1$.  Choosing $b=a$ shows the excess equals the length of the \emph{sister} cycloid traced by a point $P_2$ on the circumference of the same rolling circle (see Figure 1, where ${\cal L}$ is the $x$-axis, $a=2$, and $b=3.5$).
 
 \begin{onlineOnly}
     \begin{center}
@@ -26,7 +26,7 @@ Roll a circle ${\cal C}_1$ of radius $a$ once through its circumference on a lin
 
 \href{https://www.desmos.com/calculator/ty0hdz7uyj}{Limacon Cylcoid Arclength 1B}
 
-What if $b<a$? Then the tracing point lies inside the rolling circle and the \emph{curtate} (from the Latin \emph{curtus}, cut short) cycloid does not cross the $x$-axis. But it does have inflection points. And the convave-down arclength of one arch exceeds the concave-up length by $8b$ (Figure ??). Each of these arclength theorems follows quickly from the other. But it took us a long time to realize this, let alone to stumble upon the latter. So we save this discussion for the end (Section ??).
+What if $b<a$? Then the tracing point lies inside the rolling circle and the \emph{curtate} (from the Latin \emph{curtus}, cut short) cycloid does not cross the $x$-axis. But it does have inflection points. And the convave-down arclength of one arch exceeds the concave-up length by $8b$ (Figure ??). Each of these arclength theorems follows quickly from the other. But it took us a long time to realize this, let alone to stumble upon the second theorem. So we save this discussion for last (Section ??).
 
 %It turns out there is a corresponding result for \emph{curtate}  (from the Latin \emph{curtus}, cut short) cycloids, curves traced by points inside a circle rolling on a line. When $b<a$, the curtate cycloid has inflection points, and the concave down arclength of one arch exceeds the concave up length by $8b$ (Figure ??). Each of these arclength theorems follows quickly from the other. But it took us a long time to realize this, so we save this result until the end (Section ??).
 
@@ -120,7 +120,9 @@ s_1 - s_2 = s_3.
 \]
 \end{theorem19}
 
-To keep the computations to a minimum, our proof of this theorem relies on the instantaneous center of rotation. We introduce this idea next. %Readers familiar with this idea might skip this and move directly to the proof.
+Our proof of this theorem is primarily geometric and relies on the instantaneous center of rotation.
+
+%To keep the computations to a minimum, our proof of this theorem relies on the instantaneous center of rotation. We introduce this idea next. %Readers familiar with this idea might skip this and move directly to the proof.
 
 \section{The Instantaneous Center of Rotation}
 From the \emph{CarTalk} puzzler archives, May 15, 2006:
@@ -220,7 +222,8 @@ Rolling a book along the top of a cylinder is a convincing way to demonstrate th
 \section{A Proof of Robinson's Theorem}
 
 \begin{proof}
-To prove the arclength theorem, imagine three circles ${\cal C}_i$, $i=1,2,3$, rolling along the $x$-axis as the points $P_i$ (at rest in the reference frames of these circles) respectively sweep out the upper and lower parts of the prolate cycloid and its sister cycloid.  We suppose the segments $\overline{Q_iP_i}$ from the centers of rotation to the tracing points make the same angle $\phi$ with the vertical at all times as in Figure 3.
+To prove the arclength theorem, imagine three circles ${\cal C}_i$, $i=1,2,3$, rolling along the $x$-axis as the points $P_i$ (at rest in the reference frames of these circles) respectively sweep out the upper and lower parts of the prolate cycloid and its sister cycloid.  Imagine also the segments $\overline{Q_iP_i}$ from the centers of rotation to the tracing points make the same angle $\phi$ with the vertical at all times as in Figure 3. In the animated version of this figure, the circle for the ordinary cycloid (centered at $C_3$) rotates at a constant rate, but the others do not. The key to our proof, and to creating the animation, is to relate the rotation rates of the three circles.
+
 
 %We suppose the circles start with the points $P_i$ at the same inclination angle $\phi=0$ and the segments $Q_iP_i$ vertical. And we also assume as illustrated in Figure 3, the segments $\overline{Q_iP_i}$ from the centers of rotation to the tracing points remain parallel at all times.
 
@@ -237,6 +240,7 @@ where  $ds_i$ are the differential arclengths along the respective curves betwee
 \end{onlineOnly}
 
 \href{https://www.desmos.com/calculator/qtse3eivit}{Limacon Cylcoid Arclength 3C}
+
 
 Let these differential arclengths have rotation arms $\rho_i = Q_iP_i$. A key point in what follows (see Figure ?? above) is that %by the symmetry of the first (red) circle about the diameter perpendicular to $\overline{P_1R_1}$,
 \[
@@ -466,7 +470,12 @@ Figure ?? shows an example closely related to the one in Figure ???. Here a circ
 
 \href{https://www.desmos.com/calculator/yillqxp8mg}{Wrapping Cycloids Around Circles Ellipse 2B}
 
-To better understand this result geometrically, we need to identify the transition points and Robinson does just that. The tangent segments at these points with their endpoints on the axes of the ellipse have length $2b$. Furthermore the points of tangency divide each segment into two segments with lengths $P^*B = b+a$ and $P^*A = b-a$, respectively equal to the semi-major and semi-minor axes (see Figure ? below).
+To understand this result geometrically, we need to identify the transition points and Robinson does just that. He shows 
+the transition points divide the segments tangent to the ellipse (with their endpoints on its extended axes) into segments $P^*B = b+a$ and $P^*A = b-a$, with lengths respectively equal to the semi-major and semi-minor axes (see Figure ???). To see why, we turn to a more practical way of drawing an ellipse.
+
+
+
+%The tangent segments at these points with their endpoints on the axes of the ellipse have length $2b$. Furthermore the points of tangency divide each segment into two segments with lengths $P^*B = b+a$ and $P^*A = b-a$, respectively equal to the semi-major and semi-minor axes (see Figure ? below).
 
 
 %Robinson identifies the transition points. The tangent segments at these points with their endpoints on the axes of the ellipse have length $2b$. Furthermore the points of tangency divide each segment into two segments with lengths $P^*B = b+a$ and $P^*A = b-a$ equal to the semi-major and semi-minor axes (see Figure ?). 
@@ -479,7 +488,6 @@ To better understand this result geometrically, we need to identify the transiti
 
 \href{https://www.desmos.com/calculator/2afbtinzyu}{Wrapping Cycloids Around Circles Ellipse 2BB}
 
-To better understand why, we turn to a more practical way of drawing an ellipse.
 
 %To better understand why and to give an equivalent description of the transition points (as the points on the ellipse that minimize the length of its tangent segments running between the coordinate axes), we turn to a more practical way to draw an ellipse. %the trammel of Archimedes.
 
@@ -488,12 +496,25 @@ To better understand why, we turn to a more practical way of drawing an ellipse.
 
 
 \section{The Trammel of Archimedes}
+Carpenters on occasion
+ use the trammel of Archimedes to draw an ellipse.
+\begin{center}  
+\youtube{watch?v=SZ6_jjfqNBo}  
+\end{center}
 
+\href{https://www.youtube.com/watch?v=SZ6_jjfqNBo}{Tom Silva drawing an ellipse}
 
-In an episode of \emph{This Old House} Tom Silva uses the trammel of Archimedes to construct an ellipse. Trammel comes from \emph{trēmaculum}, a concatenation of the Latin \emph{trēs} (``three") and \emph{macula} (``mesh"). In middle English it referred to a three-layered fishing net and it has evolved to mean any restraint or hindrance (CITE A SOURCE HERE). And restraining two points $P$ and $Q$ on a thin rod to slide along two (usually perpendicular) is exactly what we need to force any third point $P^*$ on that rod (or more generally any point fixed in the reference frame of the rod) to trace an ellipse. %that we can draw an ellipse by tracing a third point $P^*$ on the rod. %(more generally, as the endpoints of a segment slide along two perpendicular lines, a point fixed in the reference frame of the segment sweeps out an ellipse). 
+%In an episode of \emph{This Old House} Tom Silva uses the trammel of Archimedes to construct an ellipse. Trammel comes from \emph{trēmaculum}, a concatenation of the Latin \emph{trēs} (``three") and \emph{macula} (``mesh"). In middle English it referred to a three-layered fishing net and it has evolved to mean any restraint or hindrance (CITE A SOURCE HERE). And restraining two points $P$ and $Q$ on a thin rod to slide along two (usually perpendicular) is exactly what we need to force any third point $P^*$ on that rod (or more generally any point fixed in the reference frame of the rod) to trace an ellipse. %that we can draw an ellipse by tracing a third point $P^*$ on the rod. %(more generally, as the endpoints of a segment slide along two perpendicular lines, a point fixed in the reference frame of the segment sweeps out an ellipse). 
 
-The trammel of Archimedes hides in Figure ??, repeated here below, where the endpoints of the diameter $\overline{PR}$ of ${\cal C}_1$ through $P^*$ move along perpendicular lines. 
+ Trammel comes from \emph{trēmaculum}, a concatenation of the Latin \emph{trēs} (``three") and \emph{macula} (``mesh"). In middle English it referred to a three-layered fishing net and it has evolved to mean any restraint or hindrance (CITE A SOURCE HERE). And restraining two points on a thin rod to slide along two (usually perpendicular) lines is exactly what we need to force any third point on that rod (or any point fixed in the reference frame of the rod) to trace an ellipse. %that we can draw an ellipse by tracing a third point $P^*$ on the rod. %(more generally, as the endpoints of a segment slide along two perpendicular lines, a point fixed in the reference frame of the segment sweeps out an ellipse). 
 
+The trammel of Archimedes hides in Figure ??, repeated here below. As ${\cal C}_1$ rolls around ${\cal C}_2$, the endpoints of the diameter $\overline{PR}$ through the tracing point slide along perpendicular lines. This is exactly what we need to understand the transition points.
+
+Well not quite. When the tracing point lies on the extension of $\overline{PR}$ as it does here, $\overline{PR}$ is \emph{never} tangent to the ellipse. It is only when $P^*$ lies on $\overline{PR}$ that $\overline{PR}$ is ever tangent to the ellipse. 
+
+To see this
+
+ 
 
 
  %(The Wilderness Act of 1964 defined wilderness as ``an area where the earth and its community of life are untrammeled by man, where man himself is a visitor who does not remain")
@@ -527,11 +548,7 @@ in the coordinate system in Figure ??. So $P$ sweeps out a quarter-ellipse cente
 This method of tracing an ellipse
 
 Tom Silva 
-\begin{center}  
-\youtube{watch?v=SZ6_jjfqNBo}  
-\end{center}
 
-\href{https://www.youtube.com/watch?v=SZ6_jjfqNBo}{Tom Silva drawing an ellipse}
 
 We can turn this into a calculus problem by asking if the sliding ladder is ever tangent to the quarter-ellipse. Or, we can turn this question around and ask to find the tracing point if the ladder below, making an angle $\phi$ with the floor, is tangent to the quarter-ellipse.
 
